--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -35,8 +35,8 @@ pipeline:
   # Recording settings
   recording:
     enabled: true
-    continuous: false      # true for always recording, false for event-based
-    event_based: true     # record only when events detected
+    continuous: true      # true for always recording, false for event-based
+    event_based: false     # record only when events detected
     
     # Video settings
     video:
@@ -50,12 +50,18 @@ pipeline:
       
     # File settings
     output_dir: "recordings/"
-    filename_template: "plowpilot_%Y%m%d_%H%M%S.mp4"
+    filename_template: "plowpilot_%Y%m%d_%H%M%S.avi"
     max_file_size: 100     # MB
     max_duration: 300      # seconds
     
-    # GStreamer pipeline for recording
-    gst_pipeline: "appsrc name=src ! video/x-raw,format=BGR,width=1280,height=720,framerate=30/1 ! videoconvert ! x264enc preset=ultrafast crf=23 bitrate=2000 ! mp4mux ! filesink location=recordings/plowpilot_%Y%m%d_%H%M%S.mp4"
+    # Audio settings
+    audio:
+      enabled: true
+      device: "hw:0,0"        # USB webcam audio
+      sample_rate: 48000
+      channels: 1              # Mono
+      codec: "mp3"             # MP3 encoding
+      bitrate: 128             # kbps
     
   # Event detection
   events:
